--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pytest = "^7.4.1"
 fastapi = "^0.103.1"
 pydantic-settings = "^2.0.3"
 python-dotenv = "^1.0.0"
+google-cloud-storage = "^2.12.0"
 
 
 [build-system]
