Some whatsapp stuff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pydantic = "^2.3.0"
 httpx = "^0.24.1"
 pytest = "^7.4.1"
 fastapi = "^0.103.1"
-pydantic-settings = "^2.0.3"
 python-dotenv = "^1.0.0"
 google-cloud-storage = "^2.12.0"
+sqlmodel = "^0.0.8"
 
 
 [build-system]
