Add watch to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,8 @@ services:
     build: .
     ports:
       - 8080:8080
+    develop:
+      watch:
+        - action: sync+restart
+          path: .
+          target: /app/picmeo
