--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,21 @@
 
 services:
-  picmeo-back:
+  back:
     build: .
     ports:
       - 8080:8080
     volumes:
       - ./src:/app/picmeo/src
+
+  ngrok-instance:
+    image: ngrok/ngrok:latest
+    restart: unless-stopped
+    command:
+      - "start"
+      - "--all"
+      - "--config"
+      - "/etc/ngrok.yml"
+    volumes:
+      - ./ngrok.yml:/etc/ngrok.yml
+    ports:
+      - 4040:4040
